# xeus-robot

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  environment-dev.yml  environment.yml
.azure-pipelines/: azure-pipelines-linux.yml  unix-build.yml
.github/workflows/: main.yml
binder/: environment.yml  postBuild
notebooks/: Interactive_Python_XKCD.ipynb  SeleniumScreenshots.ipynb  Untitled.ipynb  xrobot.ipynb
share/jupyter/kernels/xrobot/: kernel.json.in
src/: main.cpp  xdebugger.cpp  xdebugger.hpp  xdebugger_base.cpp  xdebugger_base.hpp  xeus_robot_config.hpp  xinternal_utils.cpp  xinternal_utils.hpp  xinterpreter.cpp  xinterpreter.hpp  xpaths.cpp  xpaths.hpp  xptvsd_client.cpp  xptvsd_client.hpp  xpythonhome.cpp  xpythonhome.hpp  xrobodebug_client.cpp  xrobodebug_client.hpp  xrobot_extension.cpp  xtraceback.cpp  xtraceback.hpp  xutils.cpp  xutils.hpp
test/: CMakeLists.txt  test_xrobot.cpp  test_xrobot_kernel.py  xeus_client.cpp  xeus_client.hpp
